fixing layout issues in 'crie seu evento' link

--- a/codigo-fonte/novo-evento/css/style.css
+++ b/codigo-fonte/novo-evento/css/style.css
@@ -226,7 +226,8 @@ hr {
 }
 
 footer {
-    padding-top: 50px;
+    padding-top: 60px;
+    margin-top: 20px;
 }
 
 .copyright {
